# example_bot

./: .gitignore  pyproject.toml
main-app/: .env_example  main.py
main-app/alembic/: env.py
main-app/core/: __init__.py  config.py  db_helper.py
main-app/middleware/: __init__.py  db.py
main-app/routers/: __init__.py
main-app/routers/commands/: __init__.py
main-app/routers/commands/admin/: __init__.py
main-app/routers/commands/user/: __init__.py  echo.py  start.py
